Phase5/negative_tests/prog11.dlp
// This program tests error prints correct location for binop.
var x = 3; y = true;
var z = x + y;
return 0;